# KittenTTS-webui

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh
nextjs_website/: package.json
nextjs_website/.next/: BUILD_ID  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  trace  trace-build
nextjs_website/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
nextjs_website/.next/dev/: prerender-manifest.json  trace
nextjs_website/.next/dev/cache/: .rscinfo
nextjs_website/.next/dev/server/: server-reference-manifest.js  server-reference-manifest.json
nextjs_website/.next/dev/static/chunks/: [root-of-the-server]__28bc9c2a._.css  [root-of-the-server]__28bc9c2a._.css.map  _a1b13bc1._.js  _a1b13bc1._.js.map  app_globals_css_bad6b30c._.single.css  app_globals_css_bad6b30c._.single.css.map  node_modules_7f09fef0._.js.map  node_modules_@swc_helpers_cjs_d80fb378._.js.map  node_modules_next_app_72f3d36f.js.map  node_modules_next_dist_be32b49c._.js.map  node_modules_next_dist_client_17643121._.js.map  (+14 more)
nextjs_website/.next/server/: server-reference-manifest.js  server-reference-manifest.json
nextjs_website/.next/server/app/: index.html  page_client-reference-manifest.js
nextjs_website/.next/server/pages/: 404.html  500.html
nextjs_website/.next/static/chunks/: 4a5aceaeaf77f485.css  c480d7d89ad776e9.js
nextjs_website/app/: globals.css  layout.tsx  page.tsx
nextjs_website/app/api/tts/: route.ts
python_backend/: main.py  precache_models.py  pyproject.toml
(+97 files in other folders)
